--- a/_posts/2022-05-27-RDS-in-AWS.md
+++ b/_posts/2022-05-27-RDS-in-AWS.md
@@ -36,7 +36,7 @@ This is achieved with Amazon Redshift.
 ## Difference between Multi-AZ and Read-Replica
 They have almost the same functions but let's find out what is unique about them
 
-![Multiple-AZ!](/assets/images/RDS_Multi-AZ.png "Multi-AZ")
+![Multiple!](/assets/images/RDS_Multi-AZ.jpg "Multi-AZ")
 
 **Multi-AZ**
 The real problem multi-AZ solves is:
