--- a/_posts/2022-05-27-RDS-in-AWS.md
+++ b/_posts/2022-05-27-RDS-in-AWS.md
@@ -36,11 +36,16 @@ This is achieved with Amazon Redshift.
 ## Difference between Multi-AZ and Read-Replica
 They have almost the same functions but let's find out what is unique about them
 
-![Multiple!](/assets/images/RDS_Multi-AZ.jpg "Multi-AZ")
+![Multiple AZ!](/assets/images/RDS-Multi-AZ.jpg "Multi-AZ")
 
 **Multi-AZ**
 The real problem multi-AZ solves is:
 Multi-AZ is used to make sure of availability of data and disaster recovery, in a case where the primary database in another AZ(Let's say `us-east-1a`) goes down then Multi-AZ give the advantage of secondary database in another AZ(Let's say `us-west-2b`) becasue the database is replicated accross the two availability zones to solve the problem of making sure we always have access to our data in the database.
+
+
+
+
+![Read Replica!](/assets/images/Read-Replica.jpg "Read-Replica")
 
 **Read Replica**
 The problem Read Replica solves is: 
