--- a/_posts/2022-05-27-RDS-in-AWS.md
+++ b/_posts/2022-05-27-RDS-in-AWS.md
@@ -36,7 +36,7 @@ This is achieved with Amazon Redshift.
 ## Difference between Multi-AZ and Read-Replica
 They have almost the same functions but let's find out what is unique about them
 
-![Multiple AZ!](/assets/images/RDS-Multi-AZ.jpg)
+[![Multiple AZ!](/assets/images/RDS-Multi-AZ.jpg "Multi-AZ")](https://www.percona.com/blog/wp-content/uploads/2018/07/RDS_Multi-AZ_1-1024x677.png)
 
 **Multi-AZ**
 The real problem multi-AZ solves is:
@@ -45,7 +45,7 @@ Multi-AZ is used to make sure of availability of data and disaster recovery, in 
 
 
 
-![Read Replica!](/assets/images/Read-Replica.jpg)
+![Read Replica!](/assets/images/Read-Replica.jpg "Read-Replica")
 
 **Read Replica**
 The problem Read Replica solves is: 
