--- a/_posts/2022-05-27-RDS-in-AWS.md
+++ b/_posts/2022-05-27-RDS-in-AWS.md
@@ -50,7 +50,7 @@ Multi-AZ is used to make sure of availability of data and disaster recovery, in 
 **Read Replica**
 The problem Read Replica solves is: 
 **Read Replica** Boosts performance of the database. How does that happen?
-A read-only copy of the primary database is replicated across different AZ's, it can also be replicated across regions. With **Read Replica**, you get your own unique DNS endpoint different from the endpoint of the primary database. 
+A read-only copy of the primary database is replicated across different AZ's, it can also be replicated across regions which enables scalability. With **Read Replica**, you get your own unique DNS endpoint different from the endpoint of the primary database. 
 **Read Replica** can be promoted to a database. You must have automatic backup in order to deploy read replica.
  
 
