--- a/_posts/2022-06-13-Route53.md
+++ b/_posts/2022-06-13-Route53.md
@@ -5,4 +5,10 @@ subtitle: Amazon Route53 Overview & Best Practices
 categories: Site
 tags: [DNS, Hosting]
 
----
+--- 
+
+What is DNS?
+DNS means Domain Name Services. It is used to convert human-friendly domain names to ip address that DNS servers can understand. Route53 is the DNS service of AWS and it supports ipv4 and ipv6.
+
+Top-Level Domain(TLD).
+Top-Level Domain is last word in a domain name e.g a typical website like `google.com`; the domain name is `google` and the TLD will be `.com`
