--- a/_posts/2022-06-13-Route53.md
+++ b/_posts/2022-06-13-Route53.md
@@ -7,8 +7,58 @@ tags: [DNS, Hosting]
 
 --- 
 
-What is DNS?
+ 
+## Amazon Route53 Overview & Best Practices
+
+**What is DNS?**  <br/>
 DNS means Domain Name Services. It is used to convert human-friendly domain names to ip address that DNS servers can understand. Route53 is the DNS service of AWS and it supports ipv4 and ipv6.
 
-Top-Level Domain(TLD).
+**Top-Level Domain(TLD)** <br/>
 Top-Level Domain is last word in a domain name e.g a typical website like `google.com`; the domain name is `google` and the TLD will be `.com`
+ 
+
+ There are different DNS record types.
+
+- **Start of Authority (SOA)**
+ DNS records are used by Top-Level Domain servers to direct traffic to the content DNS server that contains the authoritative DNS records.
+
+- **A record**
+is used by a computer to translate the name of the domain to ip address.
+
+- **Time To Live (TTL)**
+is the length that a DNS record is cached on either the resolving server or a user's own local PC.
+
+- **Canonical Name (CNAME)**
+Can be used to resolve one domain name to another. e.g you might have a mobile website with the domain name `m.facebook.com` that is used when users browse your domain with their mobile phone.
+
+- **Alias records**
+Are used to map resources record sets in your hosted zone to AWS architecture that are configured as websites. e.g Load balancer, CloudFront Distributions, or S3 buckets.
+
+**Routing Policies.** <br/>
+- Simple Routing.
+- Failover Routing.
+- Latency-Based Routing.
+- Geolocation Routing.
+- Geoproximity Routing.
+- Weight Routing.
+- Multivalue Answer Routing.
+
+
+## Best Practices for Route53
+
+**TTL:** TTLs are defined in seconds so the recommended range for TTL values is 60 to 172,800 seconds.<br/>
+The choice of a TTL is a trade-off between latency and reliability, and responsiveness to change. With shorter TTLs on a record, DNS resolvers notice updates to the record quicker as they must query more frequently and the longer the TTL, the longer it takes to respond to changes. So when setting your TTL set a time you can afford to wait for changes to take place. However, if you prefer long TTLs, you can temporarily shorten your TTL when working on your Route53 DNS 
+ 
+**CNAME:** DNS resolvers must make more queries to answer CNAMEs, which increases latency and costs. Where possible, a faster and cheaper alternative is to use a **Route 53 alias record** Alias records allow Route 53 to respond with a direct answer for AWS resources (for example, a load balancer) and for other domains within the same hosted zone.
+
+**DNS Change Propergation:** When you create or update a record or hosted zone by using the Route 53 console or API, it takes some time for the change to be reflected across the internet. This is called change propagation. While propagation typically takes less than one minute globally, there are occasionally delays.
+
+
+For more best practices on Route53 check it out on [AWS Docs](https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/best-practices-dns.html)
+
+
+**These notes were taken on A Cloud Guru and the Best practices from AWS Docs**
+
+
+
+
