--- a/_posts/2022-06-13-Route53.md
+++ b/_posts/2022-06-13-Route53.md
@@ -3,7 +3,7 @@ layout: post
 title: Amazon Route53 (DNS)
 subtitle: Amazon Route53 Overview & Best Practices
 categories: Site
-tags: [DNS, Hosting]
+tags: [DNS, Hosting, TDL, TTL, ]
 
 --- 
 
@@ -32,7 +32,7 @@ is the length that a DNS record is cached on either the resolving server or a us
 Can be used to resolve one domain name to another. e.g you might have a mobile website with the domain name `m.facebook.com` that is used when users browse your domain with their mobile phone.
 
 - **Alias records**
-Are used to map resources record sets in your hosted zone to AWS architecture that are configured as websites. e.g Load balancer, CloudFront Distributions, or S3 buckets.
+Are used to map resources record in your hosted zone to AWS architecture that are configured as websites. e.g Load balancer, CloudFront Distributions, or S3 buckets.
 
 **Routing Policies.** <br/>
 - Simple Routing.
