Route-update and ELB

--- a/_posts/2022-06-13-Route53.md
+++ b/_posts/2022-06-13-Route53.md
@@ -7,8 +7,7 @@ tags: [DNS, Hosting, TDL, TTL, ]
 
 --- 
 
- 
-## Amazon Route53 Overview & Best Practices
+Route53 is the AWS resource that is used to utilize DNS services.
 
 **What is DNS?**  <br/>
 DNS means Domain Name Services. It is used to convert human-friendly domain names to ip address that DNS servers can understand. Route53 is the DNS service of AWS and it supports ipv4 and ipv6.
