--- a/_posts/2022-06-27-Kinesis.md
+++ b/_posts/2022-06-27-Kinesis.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Amazon Kinesis
-subtitle: Features & Advantages of Kinesis
+subtitle: Features & Flavours of Kinesis
 categories: Site
 tags: [Data-Stream, Data-Firehose, Kinesis-Data-Analytics ]
 ---
