--- a/_posts/2023-04-05-Lambda.md
+++ b/_posts/2023-04-05-Lambda.md
@@ -15,6 +15,7 @@ When working with Lambda you configure and define the kind of code you want your
 
 
 Lambda is a very important service to utilize when working with an Event-Driven Architecture. You can set up event sources or other services that generate events so they can trigger your Lambda Function based on particular changes or events. Services that integrate well with Lambda are Amazon DynamoDB stream, Amazon Kinesis, Amazon SQS, Amazon SNS and Amazon S3. A typical example will be, to trigger a Lambda Function when an S3 file is altered or removed.
+![Serverless](/assets/images/banners/Serverless-Services.png "Serverless-Services")
 
 
 ## Key Benefits and Features of Using Lambda:
