--- a/_posts/2023-04-05-Lambda.md
+++ b/_posts/2023-04-05-Lambda.md
@@ -20,8 +20,7 @@ Lambda is a very important service to utilize when working with an Event-Driven 
 
 ## Key Benefits and Features of Using Lambda:
 - **Fully Managed Compute Service:** You only worry about your functions and code AWS takes care of OS upgrades, patching and maintaining the underlying servers.</br>
-- **Built-in High-Availability and Fault Tolerance:** AWS takes care of making sure that your server is by replicating those servers across different AZs so they are always available to handle the traffic. </br>
-- Fast Scaling
-- Automatic Load-Balancing
-- Monitoring by Default
-- Pay only for used resources.
+- **Built-in High-Availability and Fault Tolerance:** AWS takes care of making sure that your server is by replicating those servers across different AZs so they are always available to handle the traffic.
+- **Fast Scaling:** Lambda automatically scales as your traffic grows and it scales faster than regular auto-scaling of EC2 instances.
+- **Monitoring by Default:** You can monitor your code(Functions) through CloudWatch which is connected to your Lambda service by Default.
+- **Pay only for used resources:** Instead of over-provisioning or letting your EC2 instances keep running when it's idle, you can use Lambda so that you only pay for the time your Lambda runs and it shuts down after handling your request.
