--- a/_posts/2023-04-17-AWS-SAM.md
+++ b/_posts/2023-04-17-AWS-SAM.md
@@ -9,13 +9,13 @@ banner: "/<path/>"
 
 ## What is SAM?
 
-AWS SAM (Serverless Application Model) is an open-source framework that simplifies the deployment and management of serverless applications on AWS. It is a model that describes the serverless application and provides a simplified syntax for defining the AWS resources used by the application. AWS SAM can be used to deploy serverless applications built using AWS Lambda, Amazon API Gateway, and Amazon DynamoDB. </br>
+AWS SAM (Serverless Application Model) is an open-source framework that simplifies the deployment and management of serverless applications on AWS. It is a model that describes the serverless application and provides a simplified syntax for defining the AWS resources used by the application. AWS SAM can be used to deploy serverless applications built using AWS Lambda, Amazon API Gateway, and Amazon DynamoDB. 
 
 AWS SAM uses AWS CloudFormation under the hood to provision and configure resources for serverless applications. AWS SAM builds on the existing capabilities of AWS CloudFormation, allowing developers to easily manage serverless resources using a simple, declarative syntax.
 
 ## What are the benefits and use cases for AWS SAM?
 
-**Benefits of AWS SAM:** </br>
+**Benefits of AWS SAM:** 
 
 - Simplified Syntax: AWS SAM provides a simplified syntax for defining serverless resources. The syntax is easy to understand and makes it easy for developers to define the resources needed by their serverless application.
 
@@ -27,7 +27,7 @@ AWS SAM uses AWS CloudFormation under the hood to provision and configure resour
 
 - Integrated with AWS Services: AWS SAM is tightly integrated with other AWS services such as AWS Lambda, Amazon API Gateway, and Amazon DynamoDB. This makes it easy to create serverless applications that leverage the full power of AWS.
 
-**Use Cases for AWS SAM:** </br>
+**Use Cases for AWS SAM:** 
 
 - Web Applications: AWS SAM can be used to build and deploy web applications that are built using serverless technologies such as AWS Lambda and Amazon API Gateway.
 
@@ -40,7 +40,7 @@ AWS SAM uses AWS CloudFormation under the hood to provision and configure resour
 - Chatbots: AWS SAM can be used to build and deploy chatbots that use serverless technologies such as AWS Lambda and Amazon Lex.
 
 
-**AWS SAM works well with a variety of AWS services. Here are some examples:** </br>
+**AWS SAM works well with a variety of AWS services. Here are some examples:** 
 
 - AWS Lambda: AWS SAM is designed to work seamlessly with AWS Lambda, which is a serverless computing service that lets you run your code without managing servers.
 
